Refactor: 테스트 코드에서 Exception 별 메서드를 활용해라
테스트 코드에서 Exception 별 메서드를 활용해서 리팩토링함.

리팩토링한 내용:
- Exception 별 메서드로 수정함